<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/basicInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/plant_sampling_basicinfo_string"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
            android:visibility="gone" />


        <Button
            android:id="@+id/annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/plant_sampling_annotation"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/plantationEvalvuation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plntFormBtnMarginVert"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/planting_activity"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/smc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/smc_works"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/vfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/vfc"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/protection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/boundary_protection"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/submitPlantationDetails"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/approvePlantationDetails"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/approve"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/closePlantationDetails"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/close"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />

        <Button
            android:id="@+id/viewSamplePlotMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:text="@string/view_sample_plot_map"
            android:textAlignment="center"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton" />
    </LinearLayout>

</RelativeLayout>