<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/kfdl_logo_string"
        android:src="@drawable/splash_icon" />

    <TextView
        android:id="@+id/tvDepartmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_margin="10sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kfdl_logo_string_kn"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:gravity="center"
        android:text="@string/e_evaluation"
        android:textColor="@color/black"
        android:textSize="25sp" />
</RelativeLayout>