<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/plant_sampling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plant_samp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/sdp_sampling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdp_samp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/scptsp_sampling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scp_n_tsp_samp"
            android:textAlignment="center"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/otherworks_sampling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_works_samp"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/plntFormBtnMarginVert"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/Def_MyButton"
           />

    </LinearLayout>

</RelativeLayout>