<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical|center|center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/basicInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plant_sampling_basicinfo_string"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:textColor="@android:color/white"
            android:background="@color/colorGreen"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/smc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plant_sampling_smc_string"
            android:textAlignment="center"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:textColor="@android:color/white"
            android:background="@color/colorGreen"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/vfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plant_sampling_vfc_string"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:padding="@dimen/submit_button_padding_topbottom"
            android:textSize="@dimen/submit_button_textsize"
            android:background="@color/colorGreen"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>